--- a/gb_clocks.cmp
+++ b/gb_clocks.cmp
@@ -6,6 +6,8 @@
 			outclk_1 : out std_logic;        -- clk
 			outclk_2 : out std_logic;        -- clk
 			outclk_3 : out std_logic;        -- clk
+			outclk_4 : out std_logic;        -- clk
+			outclk_5 : out std_logic;        -- clk
 			locked   : out std_logic         -- export
 		);
 	end component gb_clocks;
